--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -30,17 +30,39 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.5
+  # State Management
+  flutter_bloc: ^8.1.4
+  bloc: ^8.1.3
+  # Dependency Injection
+  get_it: ^7.6.7
+  # API & WebSocket
+  dio: ^5.4.1
+  web_socket_channel: ^2.4.4
+  # Local Storage
+  shared_preferences: ^2.3.3
+  # Utilities
+  equatable: ^2.0.5
+  dartz: ^0.10.1
+  # UI
   fl_chart: ^0.69.0
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.1
+
+  provider: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Utils
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  bloc_test: ^9.1.6
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
