--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   cached_network_image: ^3.3.1
 
   provider: ^6.0.5
-
+  timeago: ^3.6.1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
