--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 
   provider: ^6.0.5
   timeago: ^3.6.1
+  animations: ^2.0.11 
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
