docs: Add comprehensive project documentation
- Add getting-started guide with setup instructions
- Add detailed system architecture overview
- Add system requirements specification
- Add coding standards and conventions
- Update project structure documentation

This documentation provides essential guidelines for development,
deployment, and maintenance of the system.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       DATABASE_URL: "postgres://flickuser:flickpass@timescaledb:5432/flickdb"
       RUST_LOG: "debug"
       RUST_BACKTRACE: 1
-      dKC4IdrUUjbO9CVS+1ETpBPJinRAWrzPn914SB5Vi+g=: "your-development-secret-key"
+      JWT_SECRET: "your-development-secret-key"
     depends_on:
       timescaledb:
         condition: service_healthy
