--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       POSTGRES_DB: flickdb
       POSTGRES_USER: flickuser
-      POSTGRES_PASSWORD: flickpass
+      POSTGRES_PASSWORD: flickpass # 실제 운영환경에서는 보안 강화 필요
     ports:
       - "5432:5432"
     volumes:
@@ -38,6 +38,6 @@ services:
         condition: service_healthy
 
 volumes:
-  timescaledb_data:
-  cargo_cache:
-  target_cache:
+  timescaledb_data: # Database 데이터 저장
+  cargo_cache: # Rust 빌드 캐시
+  target_cache: # Rust 컴파일 결과물 캐시
