--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -25,6 +25,7 @@ futures = "0.3"
 
 # 데이터베이스
 sqlx = { version = "0.7", features = [
+    "runtime-tokio-rustls",
     "runtime-tokio-native-tls",
     "postgres",
     "chrono",
@@ -43,6 +44,7 @@ serde_json = "1.0"
 
 # 시간 관련
 chrono = { version = "0.4", features = ["serde"] }
+#chrono = "0.4"
 
 # 유틸리티
 uuid = { version = "1.0", features = ["v4", "serde"] }
@@ -62,5 +64,3 @@ sysinfo = "0.29"
 # OpenAPI/Swagger
 utoipa = { version = "4.1", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
-
-# 
