chore: Add rust_server/.env to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ Thumbs.db
 /flutter_client/.flutter-plugins
 /flutter_client/.flutter-plugins-dependencies
 /flutter_client/.packages
+
+# Environment variables
+.env
+*.env
+.env.*
+!.env.example
+rust_server/.env
