Copyrefactor: Improve enum handling and WebSocket implementation
- Add macro for consistent enum implementations
- Implement From/Display traits for enum types
- Consolidate WebSocket handlers into single file
- Fix lifetime issues in WebSocket actor
- Improve metrics streaming implementation
- Add proper error handling for database operations
- Clean up redundant code and improve type safety

--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -64,3 +64,5 @@ sysinfo = "0.29"
 # OpenAPI/Swagger
 utoipa = { version = "4.1", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
+
+config = "0.13"
