fix: Dockerfile.dev version update

--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -12,6 +12,8 @@ name = "rust_server"
 path = "src/main.rs"
 
 [dependencies]
+idna = "0.5.0"  # 버전 업데이트
+
 # 웹 프레임워크 & 서버
 actix-web = "4.4"
 actix = "0.13"
