fix: docker setup with compatible cargo-watch version
- Set cargo-watch to v8.4.1 for Rust 1.74 compatibility
- Update Dockerfile.dev dependencies

--- a/rust_server/Dockerfile.dev
+++ b/rust_server/Dockerfile.dev
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /usr/src/app
 
 # Install latest version of cargo-watch
-RUN cargo install cargo-watch
+RUN cargo install cargo-watch --version=8.4.1
 
 # Default command for development
 CMD ["cargo", "watch", "-x", "run"]
