chore: add sqlx offline mode support

--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -33,7 +33,8 @@ sqlx = { version = "0.7", features = [
     "chrono",
     "json",
     "uuid",
-    "migrate"
+    "migrate",
+    "offline"
 ]}
 
 # 인증
