--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   data_table_2: ^2.5.15
   collection: ^1.18.0
   vector_math: ^2.1.4
+  image_picker: ^1.1.2
 
 
 dev_dependencies:
