--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -120,27 +120,27 @@ flutter:
     - assets/icons/
     - assets/animations/
 
-  fonts:
-    - family: Pretendard
-      fonts:
-        - asset: assets/fonts/Pretendard-Thin.otf
-          weight: 100
-        - asset: assets/fonts/Pretendard-ExtraLight.otf
-          weight: 200
-        - asset: assets/fonts/Pretendard-Light.otf
-          weight: 300
-        - asset: assets/fonts/Pretendard-Regular.otf
-          weight: 400
-        - asset: assets/fonts/Pretendard-Medium.otf
-          weight: 500
-        - asset: assets/fonts/Pretendard-SemiBold.otf
-          weight: 600
-        - asset: assets/fonts/Pretendard-Bold.otf
-          weight: 700
-        - asset: assets/fonts/Pretendard-ExtraBold.otf
-          weight: 800
-        - asset: assets/fonts/Pretendard-Black.otf
-          weight: 900
+  # fonts:
+  #   - family: Pretendard
+  #     fonts:
+  #       - asset: assets/fonts/Pretendard-Thin.otf
+  #         weight: 100
+  #       - asset: assets/fonts/Pretendard-ExtraLight.otf
+  #         weight: 200
+  #       - asset: assets/fonts/Pretendard-Light.otf
+  #         weight: 300
+  #       - asset: assets/fonts/Pretendard-Regular.otf
+  #         weight: 400
+  #       - asset: assets/fonts/Pretendard-Medium.otf
+  #         weight: 500
+  #       - asset: assets/fonts/Pretendard-SemiBold.otf
+  #         weight: 600
+  #       - asset: assets/fonts/Pretendard-Bold.otf
+  #         weight: 700
+  #       - asset: assets/fonts/Pretendard-ExtraBold.otf
+  #         weight: 800
+  #       - asset: assets/fonts/Pretendard-Black.otf
+  #         weight: 900
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
