fix: improve social login UI with proper icon assets
Fix icon duplication in social login buttons
Set consistent button sizing and styling
Replace placeholder icons with actual button images
Adjust padding and layout for better visual consistency

--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -119,6 +119,10 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - assets/icons/apple.png
+    - assets/icons/kakao.png
+    - assets/icons/google.png
+    - assets/icons/facebook.png
 
   # fonts:
   #   - family: Pretendard
