feat: add social login icons and implement server communication
- Add social login icons (Kakao, Google, Apple, Facebook)
- Implement server list API integration
- Fix API path (/api/servers → /servers)
- Improve server communication error handling
- Add debug logging

Add UI assets for social login and fix server communication code.

--- a/flutter_client/ios/Runner/Info.plist
+++ b/flutter_client/ios/Runner/Info.plist
@@ -45,5 +45,25 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.80682608425-1rhlgkssn2i9ilp2la5n83i7juhmipq5</string>
+            </array>
+        </dict>
+    </array>
+    <key>GIDClientID</key>
+    <string>80682608425-1rhlgkssn2i9ilp2la5n83i7juhmipq5.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>com.example.flutterClient</string>
+		</array>
+	</dict>
+	</array>
 </dict>
 </plist>
