--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -30,6 +30,7 @@ sqlx = { version = "0.7", features = [
     "runtime-tokio-rustls",
     "runtime-tokio-native-tls",
     "postgres",
+    "time",
     "chrono",
     "json",
     "uuid",
