--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -123,9 +123,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+    # - assets/images/
     - assets/icons/
-    - assets/animations/
+    # - assets/animations/
     - assets/icons/apple.png
     - assets/icons/kakao.png
     - assets/icons/google.png
