--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -13,6 +13,9 @@ path = "src/main.rs"
 
 [dependencies]
 idna = "0.3"
+aes-gcm = "0.10.3"
+base64 = "0.21.5"
+rand = "0.8.5"
 
 # 웹 프레임워크 & 서버
 actix-web = "4.4"
