fix: WebSocket message parsing and metrics handling
- Remove duplicate ProcessInfo class and use unified model from server_metrics.dart
- Fix type mismatch between ResourceMetrics and ServerMetrics
- Improve WebSocket message parsing for server metrics data
- Add detailed logging for better debugging and monitoring
- Enhance error handling in WebSocket communication

The primary issue with null type casting in WebSocket messages has been resolved
by properly handling the server metrics data structure and removing model
duplications.

--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -16,6 +16,8 @@ idna = "0.3"
 aes-gcm = "0.10.3"
 base64 = "0.21.5"
 rand = "0.8.5"
+argon2 = "0.5"
+rand_core = { version = "0.6", features = ["std"] }
 
 # 웹 프레임워크 & 서버
 actix-web = "4.4"
