test: Add comprehensive test suite for core functionalities
- Implement unit tests for utils and auth service
- Add provider tests for auth and server state management
- Setup test environment with Mocktail
- Cover key business logic with 18+ passing tests

--- a/rust_server/Cargo.toml
+++ b/rust_server/Cargo.toml
@@ -77,3 +77,7 @@ utoipa = { version = "4.1", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
 
 config = "0.13"
+
+# 테스트 코드
+mockall = "0.11"
+actix-rt = "2.9" 
